# agro-platform

./: .gitignore  README.md  STEPS.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: config.py  database.py
